--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 <body>
 
-    <!-- Navigation Links -->
+    <!-- Navigation Links (Top) -->
     <header>
         <div class="container mx-auto flex justify-center space-x-4 text-sm">
             <a href="#honor-wall" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a>
@@ -159,12 +159,7 @@
             <a href="#news" class="hover:underline">AMU SVA News</a>
             <a href="#board-members" class="hover:underline">Board Members</a>
             <a href="#committees" class="hover:underline">Committees</a>
-            <a href="#contact" class="hover:underline">Contact</a>
-            <a href="#career-social" class="hover:underline">SVA Career and Social Development</a>
-            <a href="#history" class="hover:underline">SVA History</a>
             <a href="#events" class="hover:underline">Upcoming Chapter Events</a>
-            <a href="#join" class="hover:underline">Join AMU/APU SVA</a>
-            <a href="#facebook" class="hover:underline">Facebook Page</a>
         </div>
     </header>
 
@@ -205,26 +200,16 @@
     <h2>Who We Are</h2>
     <p>Our leadership team, composed of veterans and advocates, is dedicated to guiding members through their academic and professional paths. We are committed to fostering a community of support, advocacy, and empowerment for all student veterans at AMU/APU. We provide mentorship, resources for academic success, and networking opportunities with professionals in various industries. Additionally, we actively work to ensure that the voices of student veterans are heard within the university administration and beyond. Whether it’s advocating for mental health services, hosting career development workshops, or providing guidance on utilizing benefits, our team is here to make sure you’re equipped with everything you need to succeed.</p>
 </section>
-<!-- Footer Links -->
-<footer>
-    <ul class="flex flex-wrap justify-center space-x-4 text-sm">
-        <li><a href="#honor-wall" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a></li>
-        <li><a href="#home" class="hover:underline">AMU / APU SVA Home</a></li>
-        <li><a href="#news" class="hover:underline">AMU SVA News</a></li>
-        <li><a href="#board-members" class="hover:underline">Board Members</a></li>
-        <li><a href="#committees" class="hover:underline">Committees</a></li>
-        <li><a href="#contact" class="hover:underline">Contact</a></li>
-        <li><a href="#career-social" class="hover:underline">SVA Career and Social Development</a></li>
-        <li><a href="#history" class="hover:underline">SVA History</a></li>
-        <li><a href="#events" class="hover:underline">Upcoming Chapter Events</a></li>
-        <li><a href="#join" class="hover:underline">Join AMU/APU SVA</a></li>
-        <li><a href="#facebook" class="hover:underline">Facebook Page</a></li>
-    </ul>
-    <p class="text-sm mt-4 text-gray-600">Contact Us: <a href="mailto:apussva@gmail.com" class="underline">apussva@gmail.com</a></p>
-    <div class="flex justify-center mt-4">
-        <a href="https://www.facebook.com/groups/studentveteransapus" target="_blank" class="join-facebook-button bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition duration-300">Join Us on Facebook</a>
-    </div>
-</footer>
+
+    <!-- Footer Links (Bottom) -->
+    <footer>
+        <ul class="flex flex-wrap justify-center space-x-4 text-sm">
+            <li><a href="#contact" class="hover:underline">Contact</a></li>
+            <li><a href="#career-social" class="hover:underline">SVA Career and Social Development</a></li>
+            <li><a href="#history" class="hover:underline">SVA History</a></li>
+        </ul>
+        <p class="text-sm mt-4 text-gray-600">Contact Us: <a href="mailto:apussva@gmail.com" class="underline">apussva@gmail.com</a></p>
+    </footer>
 
 <style>
     .join-facebook-button {
