--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
     <p>Our leadership team, composed of veterans and advocates, is dedicated to guiding members through their academic and professional paths. We are committed to fostering a community of support, advocacy, and empowerment for all student veterans at AMU/APU. We provide mentorship, resources for academic success, and networking opportunities with professionals in various industries. Additionally, we actively work to ensure that the voices of student veterans are heard within the university administration and beyond. Whether it’s advocating for mental health services, hosting career development workshops, or providing guidance on utilizing benefits, our team is here to make sure you’re equipped with everything you need to succeed.</p>
 </section>
 
-    <!-- Footer Links (Bottom) -->
-    <footer>
-        <ul class="flex flex-wrap justify-center space-x-4 text-sm">
-            <li><a href="#contact" class="hover:underline">Contact</a></li>
-            <li><a href="#career-social" class="hover:underline">SVA Career and Social Development</a></li>
-            <li><a href="#history" class="hover:underline">SVA History</a></li>
-        </ul>
-        <p class="text-sm mt-4 text-gray-600">Contact Us: <a href="mailto:apussva@gmail.com" class="underline">apussva@gmail.com</a></p>
-    </footer>
+<!-- Footer Links (Bottom) -->
+<footer>
+    <ul class="flex flex-wrap justify-center space-x-4 text-sm">
+        <li><a href="#contact" class="hover:underline">Contact</a></li>
+        <li><a href="careers.html" class="hover:underline">SVA Career and Social Development</a></li>
+        <li><a href="#history" class="hover:underline">SVA History</a></li>
+    </ul>
+    <p class="text-sm mt-4 text-gray-600">Contact Us: <a href="mailto:apussva@gmail.com" class="underline">apussva@gmail.com</a></p>
+</footer>
 
 <style>
     .join-facebook-button {
