--- a/index.html
+++ b/index.html
@@ -151,17 +151,18 @@
 </head>
 <body>
 
-    <!-- Navigation Links (Top) -->
-    <header>
-        <div class="container mx-auto flex justify-center space-x-4 text-sm">
-            <a href="#honor-wall" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a>
-            <a href="#home" class="hover:underline">AMU / APU SVA Home</a>
-            <a href="#news" class="hover:underline">AMU SVA News</a>
-            <a href="#board-members" class="hover:underline">Board Members</a>
-            <a href="#committees" class="hover:underline">Committees</a>
-            <a href="#events" class="hover:underline">Upcoming Chapter Events</a>
-        </div>
-    </header>
+<!-- Navigation Links (Top) -->
+<header>
+    <div class="container mx-auto flex justify-center space-x-4 text-sm">
+        <a href="honors.html" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a> <!-- Link to honors.html -->
+        <a href="index.html#history" class="hover:underline">SVA History</a> <!-- Link to history section on index.html -->
+        <a href="index.html#home" class="hover:underline">AMU / APU SVA Home</a> <!-- Link to home section on index.html -->
+        <a href="index.html#news" class="hover:underline">AMU SVA News</a> <!-- Link to news section on index.html -->
+        <a href="index.html#board-members" class="hover:underline">Board Members</a> <!-- Link to board members section on index.html -->
+        <a href="index.html#committees" class="hover:underline">Committees</a> <!-- Link to committees section on index.html -->
+        <a href="index.html#events" class="hover:underline">Upcoming Chapter Events</a> <!-- Link to events section on index.html -->
+    </div>
+</header>
 
     <!-- Expandable Leadership Box -->
     <div class="expandable-box" id="leadershipBox">
