--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <style>
     /* Expandable Box Styles */
     .expandable-box {
-        background-color: rgba(255, 255, 255, 0.54); /* Updated opacity to 0.54 */
-        border: 1px solid rgba(229, 231, 235, 0.54); /* Updated opacity to 0.54 */
+        background-color: rgba(255, 255, 255, 0.54);
+        border: 1px solid rgba(229, 231, 235, 0.54);
         border-radius: 8px;
         padding: 16px;
     }
 
     .expandable-button {
-        background-color: rgba(59, 130, 246, 0.9); /* Updated opacity to 0.9 */
+        background-color: rgba(59, 130, 246, 0.9);
         color: white;
         font-size: 1rem;
         padding: 14px 24px;
@@ -29,23 +29,23 @@
     }
 
     .expandable-button:hover {
-        background-color: rgba(59, 130, 246, 1); /* Updated opacity to 1 */
+        background-color: rgba(59, 130, 246, 1);
     }
 
     .leader-name {
-        color: rgba(59, 130, 246, 0.9); /* Updated opacity to 0.9 */
+        color: rgba(59, 130, 246, 0.9);
         font-size: 1.125rem;
         cursor: pointer;
         transition: color 0.3s ease;
     }
 
     .leader-name:hover {
-        color: rgba(29, 78, 216, 1); /* Updated opacity to 1 */
+        color: rgba(29, 78, 216, 1);
     }
 
     .leader-bio {
         display: none;
-        color: rgba(107, 114, 128, 1); /* Updated opacity to 1 */
+        color: rgba(107, 114, 128, 1);
         font-size: 1rem;
         padding: 10px 0;
     }
@@ -67,7 +67,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(0, 0, 0, 0.25); /* Updated opacity to 0.25 */
+        background-color: rgba(0, 0, 0, 0.25);
         z-index: -1;
     }
 
@@ -76,30 +76,30 @@
         position: fixed;
         right: 10px;
         bottom: 10px;
-        opacity: 0.54; /* Updated opacity to 0.54 */
+        opacity: 0.54;
         z-index: 1000;
     }
 
     header {
-        background-color: rgba(255, 255, 255, 0.95); /* Updated opacity to 0.95 */
+        background-color: rgba(255, 255, 255, 0.95);
         backdrop-filter: blur(5px);
         padding: 16px 0;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     header a {
-        color: rgba(59, 130, 246, 0.95); /* Updated opacity to 0.95 */
+        color: rgba(59, 130, 246, 0.95);
         transition: color 0.3s ease;
     }
 
     a:hover {
         color: #ffffff;
-        background-color: rgba(59, 130, 246, 0.7); /* Updated opacity to 0.7 */
+        background-color: rgba(59, 130, 246, 0.7);
     }
 
     /* Section Styles */
     section {
-        background-color: rgba(255, 255, 255, 0.9); /* Updated opacity to 0.9 */
+        background-color: rgba(255, 255, 255, 0.9);
         backdrop-filter: blur(10px);
         padding: 60px 0;
         text-align: center;
@@ -108,27 +108,27 @@
     }
 
     section h2 {
-        color: rgba(59, 130, 246, 0.9); /* Updated opacity to 0.9 */
+        color: rgba(59, 130, 246, 0.9);
         font-size: 2.5rem;
         font-weight: bold;
         margin-bottom: 20px;
     }
 
     section p {
-        color: rgba(107, 114, 128, 1); /* Updated opacity to 1 */
+        color: rgba(107, 114, 128, 1);
         font-size: 1.125rem;
     }
 
     /* Footer Styles */
     footer {
-        background-color: rgba(255, 255, 255, 0.95); /* Updated opacity to 0.95 */
+        background-color: rgba(255, 255, 255, 0.95);
         backdrop-filter: blur(5px);
         padding: 30px 0;
         text-align: center;
     }
 
     footer a {
-        color: rgba(59, 130, 246, 0.9); /* Updated opacity to 0.9 */
+        color: rgba(59, 130, 246, 0.9);
         transition: color 0.3s ease;
     }
 
@@ -137,7 +137,7 @@
     }
 
     footer .join-button {
-        background-color: rgba(59, 130, 246, 0.9); /* Updated opacity to 0.9 */
+        background-color: rgba(59, 130, 246, 0.9);
         color: white;
         padding: 12px 24px;
         border-radius: 8px;
@@ -145,44 +145,45 @@
     }
 
     footer .join-button:hover {
-        background-color: rgba(59, 130, 246, 1); /* Updated opacity to 1 */
+        background-color: rgba(59, 130, 246, 1);
     }
 </style>
 </head>
 <body>
 
-<!-- Navigation Links (Top) -->
 <header>
     <div class="container mx-auto flex justify-center space-x-4 text-sm">
-        <a href="honors.html" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a> <!-- Link to honors.html -->
-        <a href="index.html#history" class="hover:underline">SVA History</a> <!-- Link to history section on index.html -->
-        <a href="index.html#home" class="hover:underline">AMU / APU SVA Home</a> <!-- Link to home section on index.html -->
-        <a href="index.html#news" class="hover:underline">AMU SVA News</a> <!-- Link to news section on index.html -->
-        <a href="index.html#board-members" class="hover:underline">Board Members</a> <!-- Link to board members section on index.html -->
-        <a href="index.html#committees" class="hover:underline">Committees</a> <!-- Link to committees section on index.html -->
-        <a href="index.html#events" class="hover:underline">Upcoming Chapter Events</a> <!-- Link to events section on index.html -->
+        <a href="honors.html" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a>
+        <a href="index.html#history" class="hover:underline">SVA History</a>
+        <a href="index.html#home" class="hover:underline">AMU / APU SVA Home</a>
+        <a href="index.html#news" class="hover:underline">AMU SVA News</a>
+        <a href="index.html#board-members" class="hover:underline">Board Members</a>
+        <a href="news.html" class="hover:underline">News</a> <!-- Added link to news.html -->
+        <a href="board.html" class="hover:underline">Board</a> <!-- Added link to board.html -->
+        <a href="index.html#committees" class="hover:underline">Committees</a>
+        <a href="index.html#events" class="hover:underline">Upcoming Chapter Events</a>
     </div>
 </header>
 
-    <!-- Expandable Leadership Box -->
-    <div class="expandable-box" id="leadershipBox">
-        <button class="expandable-button" id="toggleButton">
-            Meet the Leadership
-        </button>
-        <div id="content" class="mt-4 space-y-2">
-            <h3 class="leader-name" onclick="toggleBio('bio1')">Leader 1</h3>
-            <p id="bio1" class="leader-bio">Leader 1 Bio: Brief description here.</p>
+<!-- Expandable Leadership Box -->
+<div class="expandable-box" id="leadershipBox">
+    <button class="expandable-button" id="toggleButton">
+        Meet the Leadership
+    </button>
+    <div id="content" class="mt-4 space-y-2">
+        <h3 class="leader-name" onclick="toggleBio('bio1')">Leader 1</h3>
+        <p id="bio1" class="leader-bio">Leader 1 Bio: Brief description here.</p>
 
-            <h3 class="leader-name" onclick="toggleBio('bio2')">Leader 2</h3>
-            <p id="bio2" class="leader-bio">Leader 2 Bio: Brief description here.</p>
+        <h3 class="leader-name" onclick="toggleBio('bio2')">Leader 2</h3>
+        <p id="bio2" class="leader-bio">Leader 2 Bio: Brief description here.</p>
 
-            <h3 class="leader-name" onclick="toggleBio('bio3')">Leader 3</h3>
-            <p id="bio3" class="leader-bio">Leader 3 Bio: Brief description here.</p>
+        <h3 class="leader-name" onclick="toggleBio('bio3')">Leader 3</h3>
+        <p id="bio3" class="leader-bio">Leader 3 Bio: Brief description here.</p>
 
-            <h3 class="leader-name" onclick="toggleBio('bio4')">Leader 4</h3>
-            <p id="bio4" class="leader-bio">Leader 4 Bio: Brief description here.</p>
-        </div>
+        <h3 class="leader-name" onclick="toggleBio('bio4')">Leader 4</h3>
+        <p id="bio4" class="leader-bio">Leader 4 Bio: Brief description here.</p>
     </div>
+</div>
 
 <!-- Welcome Section -->
 <section class="bg-blue-700 bg-opacity-70 text-white">
@@ -205,34 +206,18 @@
 <!-- Footer Links (Bottom) -->
 <footer>
     <ul class="flex flex-wrap justify-center space-x-4 text-sm">
-        <li><a href="#contact" class="hover:underline">Contact</a></li>
+ <li><a href="#contact" class="hover:underline">Contact</a></li>
         <li><a href="careers.html" class="hover:underline">SVA Career and Social Development</a></li>
         <li><a href="#history" class="hover:underline">SVA History</a></li>
     </ul>
     <p class="text-sm mt-4 text-gray-600">Contact Us: <a href="mailto:apussva@gmail.com" class="underline">apussva@gmail.com</a></p>
+    <div class="mt-4">
+        <a href="https://facebook.com" class="join-facebook-button bg-blue-600 text-white py-2 px-6 rounded-lg hover:bg-blue-700 transition duration-300">Join us on Facebook</a>
+    </div>
 </footer>
-
-<style>
-    .join-facebook-button {
-        opacity: 1; /* Remove transparency */
-    }
-    .join-facebook-button:hover {
-        opacity: 1; /* Keep the button fully opaque on hover */
-    }
-</style>
 
 <!-- SVA Logo -->
 <img src="blacksva.png" alt="SVA Logo" class="sva-logo w-24 h-auto md:w-32 lg:w-40">
-
-<style>
-    /* Adjust the SVA logo without effects */
-    .sva-logo {
-        position: fixed;
-        right: 10px;
-        bottom: 10px;
-        z-index: 1000;
-    }
-</style>
 
 <script>
     // Toggle the display of the leadership content
