--- a/index.html
+++ b/index.html
@@ -155,11 +155,8 @@
     <div class="container mx-auto flex justify-center space-x-4 text-sm">
         <a href="honors.html" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a>
         <a href="index.html#history" class="hover:underline">SVA History</a>
-        <a href="index.html#home" class="hover:underline">AMU / APU SVA Home</a>
-        <a href="index.html#news" class="hover:underline">AMU SVA News</a>
-        <a href="index.html#board-members" class="hover:underline">Board Members</a>
+        <a href="board.html" class="hover:underline">Board Members</a>
         <a href="news.html" class="hover:underline">News</a> <!-- Added link to news.html -->
-        <a href="board.html" class="hover:underline">Board</a> <!-- Added link to board.html -->
         <a href="index.html#committees" class="hover:underline">Committees</a>
         <a href="index.html#events" class="hover:underline">Upcoming Chapter Events</a>
     </div>
