--- a/news.html
+++ b/news.html
@@ -77,6 +77,16 @@
         .join-button:hover {
             background-color: rgba(59, 130, 246, 1);
         }
+
+        /* SVA Logo Styles */
+        .sva-logo {
+            position: fixed;
+            right: 10px;
+            bottom: 10px;
+            opacity: 0.2;
+            z-index: 1000;
+            transition: transform 0.3s ease;
+        }
     </style>
 </head>
 <body>
