--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <a href="index.html#history" class="hover:underline">SVA History</a>
         <a href="board.html" class="hover:underline">Board Members</a>
         <a href="news.html" class="hover:underline">News</a> <!-- Added link to news.html -->
-        <a href="index.html#committees" class="hover:underline">Committees</a>
-        <a href="index.html#events" class="hover:underline">Upcoming Chapter Events</a>
+        <a href="committees.html" class="hover:underline">Committees</a>
+        <a href="events.html" class="hover:underline">Upcoming Chapter Events</a>
     </div>
 </header>
 
