--- a/index.html
+++ b/index.html
@@ -154,11 +154,12 @@
 <header>
     <div class="container mx-auto flex justify-center space-x-4 text-sm">
         <a href="honors.html" class="hover:underline">2023 Veterans Day Honor Wall Campaign</a>
-        <a href="index.html#history" class="hover:underline">SVA History</a>
-        <a href="board.html" class="hover:underline">Board Members</a>
-        <a href="news.html" class="hover:underline">News</a> <!-- Added link to news.html -->
-        <a href="committees.html" class="hover:underline">Committees</a>
+        <a href="news.html" class="hover:underline">News</a>
         <a href="events.html" class="hover:underline">Upcoming Chapter Events</a>
+        <a href="contactus.html" class="hover:underline">Contact Us</a>
+        <a href="committees.html" class="hover:underline">Committees</a>
+        <a href="careers.html" class="hover:underline">Careers</a>
+        <a href="board.html" class="hover:underline">Board Members</a>
     </div>
 </header>
 
@@ -185,19 +186,19 @@
 <!-- Welcome Section -->
 <section class="bg-blue-700 bg-opacity-70 text-white">
     <h1 class="text-5xl font-bold text-white">Welcome to AMU Student Veterans of America</h1>
-    <p class="mt-4 text-lg text-white">Empowering Veterans through Community, Resources, and Support. At AMU SVA, we believe in the power of community and the strength that comes from helping each other. As student veterans, we understand the unique challenges that come with balancing academics, transitioning from military life, and building a career. That’s why we are committed to providing the resources and support you need to thrive academically and professionally, while building lasting relationships with fellow veterans.</p>
+    <p class="mt-4 text-lg text-white">Empowering Veterans through Community, Resources, and Support. At AMU SVA, we believe in the power of community and the strength that comes from helping each other. As student veterans, we understand the unique challenges that come with balancing academics, transitioning from military life, and building a career. That’s why we are committed to providing the resources and support you need to thrive academically and professionally, while building lasting relationships with fellow veterans. Our chapter offers a supportive network that helps veterans build a meaningful academic path, create a resilient support system, and access a wealth of educational, financial, and career-related resources tailored to veterans’ needs. We foster inclusivity, encourage personal and academic growth, and seek to empower each member to reach their fullest potential.</p>
 </section>
 
 <!-- About Section -->
 <section>
     <h2>AMU Student Veterans of America Chapter</h2>
-    <p>A supportive, student-led, family-centered community bridging the gap between service and academic success. Our chapter connects military veterans with valuable resources and networks to help them succeed in their educational and professional endeavors. Whether you’re navigating the GI Bill, seeking career advice, or looking for a place to connect with like-minded individuals, AMU SVA is here to help. Our community extends beyond the classroom; we foster lasting bonds through social events, career fairs, workshops, and other initiatives designed to help veterans feel at home at AMU.</p>
+    <p>A supportive, student-led, family-centered community bridging the gap between service and academic success. Our chapter connects military veterans with valuable resources and networks to help them succeed in their educational and professional endeavors. Whether you’re navigating the GI Bill, seeking career advice, or looking for a place to connect with like-minded individuals, AMU SVA is here to help. Our community extends beyond the classroom; we foster lasting bonds through social events, career fairs, workshops, and other initiatives designed to help veterans feel at home at AMU. We work closely with university administration and veteran organizations to address the specific challenges and opportunities of military life transition, whether through scholarship resources, exclusive internship programs, or family support events, ensuring a smooth journey for each veteran and their loved ones.</p>
 </section>
 
 <!-- Mission Section -->
 <section>
     <h2>Who We Are</h2>
-    <p>Our leadership team, composed of veterans and advocates, is dedicated to guiding members through their academic and professional paths. We are committed to fostering a community of support, advocacy, and empowerment for all student veterans at AMU/APU. We provide mentorship, resources for academic success, and networking opportunities with professionals in various industries. Additionally, we actively work to ensure that the voices of student veterans are heard within the university administration and beyond. Whether it’s advocating for mental health services, hosting career development workshops, or providing guidance on utilizing benefits, our team is here to make sure you’re equipped with everything you need to succeed.</p>
+    <p>Our leadership team, composed of veterans and advocates, is dedicated to guiding members through their academic and professional paths. We are committed to fostering a community of support, advocacy, and empowerment for all student veterans at AMU/APU. We provide mentorship, resources for academic success, and networking opportunities with professionals in various industries. Additionally, we actively work to ensure that the voices of student veterans are heard within the university administration and beyond. Whether it’s advocating for mental health services, hosting career development workshops, or providing guidance on utilizing benefits, our team is here to make sure you’re equipped with everything you need to succeed. We prioritize the welfare of our members, from academic tutoring and peer counseling to connecting veterans with employment opportunities and tailored career support programs. Through consistent outreach and feedback, our mission is to continually improve our services to meet the evolving needs of the veteran community, building a legacy of support and success at AMU.</p>
 </section>
 
 <!-- Footer Links (Bottom) -->
