--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         <a href="committees.html" class="hover:underline">Committees</a>
         <a href="careers.html" class="hover:underline">Careers</a>
         <a href="board.html" class="hover:underline">Board Members</a>
+        <a href="history.html" class="hover:underline">History</a>
     </div>
 </header>
 
